--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+## CONFIGURE ENVIRONMENT VARIABLES
+spring.datasource.url=jdbc:postgresql://109.97.198.79:5432/QuantumBuy
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+server.error.include-message=always
+
+# Interactive Swagger API documentation with UI can be found at http://localhost:8080/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
+cors.allowed-origins=http://localhost:3000/
+server.port=8080
