User/Buyer/Seller models created

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Other dependencies -->
 	</dependencies>
 
 	<build>
