--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.error.include-message=always
 
