--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,12 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 spring.security.oauth2.client.provider.google.token-uri=https://accounts.google.com/o/oauth2/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+# Allowed Origins
+cors.allowedOrigins=http://example.com,http://localhost:3000
+
+
+
+
 quantum.app.jwtSecret=quantumbuySecretKey
 quantum.app.jwtExpirationMs=86400000
