--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 server.error.include-message=always
 
 # Interactive Swagger API documentation with UI can be found at http://localhost:8080/swagger-ui.html
 
-
+logging.level.com.QuantumBuy.QuantumBuy.controllers.AuthController=debug
 server.port=8080
 
 spring.main.allow-circular-references=true
