tryin to fix buycontroller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,10 +30,9 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 # Allowed Origins
-cors.allowedOrigins=http://example.com,http://localhost:3000
+cors.allowedOrigins=http://localhost:3000
+cors.allowedHeaders=Content-Type, Authorization, x-role
 
-
-
-
-quantum.app.jwtSecret=quantumbuySecretKey
 quantum.app.jwtExpirationMs=86400000
+
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p --- [%15.15t] %-40.40logger{39} : %msg%n
